--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="ajax.js"></script>
+    <script type="text/javascript" src="atualizaranking.js"></script>
 
     <style>
       body {
